src/app/globals.css
@import "tailwindcss";

:root {


  --font-heading: var(--font-new-york);

  --font-body: var(--font-satoshi);


  /* COLORS */

  --color-bg: #0E182F;

  --color-text: #f5f7ff;

  --color-primary: #d4e4ff;

  --color-accent: #7ba8ff;

  --color-glow: #a8c7ff;



  --ui-color: #D0E3F1;
  --ui-title-color: #D1AA67;


  /* SPACING */

  --section-padding: 10rem;

  --container-width: 1440px;

  /* BORDER */

  --radius-sm: 0.5rem;

  --radius-md: 1rem;

  --radius-lg: 2rem;

  /* Z INDEX */

  --z-background: 0;

  --z-stars: 1;

  --z-clouds: 2;

  --z-beams: 3;

  --z-content: 10;

  --z-header: 100;

  --z-loader: 999;

  /* ANIMATION */

  --ease-smooth: cubic-bezier(0.22, 1, 0.36, 1);

  --ease-soft: cubic-bezier(0.65, 0, 0.35, 1);

}



* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}



html {
  scrollbar-gutter: stable;
}


body {
  /* background: var(--color-bg); */
  color: var(--color-text);
  font-family: var(--font-body);
  overflow-x: hidden;
  min-height: 100vh;



}


h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
}

img {
  display: block;
  max-width: 100%;
}

.container-custom {
  width: min(100% - 2rem, var(--container-width));
  margin-inline: auto;
}


.section {
  position: relative;
  z-index: var(--z-content);

  padding-block: var(--section-padding);
}


.light-section-active {
  --ui-color: #17374F;
  --ui-title-color: #17374F;
}




.global-background {

  position: fixed;
  inset: 0;
  overflow: hidden;
  pointer-events: none;
  z-index: var(--z-background);
  opacity: 1;
  background: #0E182F;

}

.background-sky {
  position: absolute;
  inset: 0;



  /* background:
    radial-gradient(circle at top right,
      rgba(184, 217, 245, 0.9) 0%,
      rgba(112, 185, 238, 0.6) 2%,
      rgba(0, 143, 245, 0.2) 3%,
      transparent 60%),
    linear-gradient(225deg,
      #0E182F 0%); */



  /* background:
    radial-gradient(circle at center,
      #0c1d3a,
      #020814); */
}

.background-stars {
  position: absolute;
  inset: 0;
}

.background-clouds {

  position: absolute;
  inset: 0;
  opacity: 0.6;

}

.background-top-light {

  position: absolute;
  inset: 0;
  background: #008FF5;
  backdrop-filter: blur(512.7000122070312px);
  top: 0%;
  left: 50%;
  transform: translate(-30%, -50%);
  opacity: 0.6;
  border-radius: 50%;
  filter: blur(90px);
  width: 100%;
  z-index: -1;

}

.background-topright-light {

  position: absolute;
  inset: 0;
  backdrop-filter: blur(512.7000122070312px);
  top: 0%;
  right: 0%;
  transform: translate(100%, -50%);
  opacity: 0.2;
  border-radius: 50%;
  filter: blur(25px);
  /* width: 100%; */
  z-index: -1;
  background: #70B9EE;

}


.cloud {
  position: absolute;
  z-index: -3;
  opacity: 0.5;
}

.background-beams {
  position: absolute;
  inset: 0;
  overflow: hidden;
  pointer-events: none;
}

.background-color-layer-temp {
  position: absolute;
  inset: 0;
  overflow: hidden;
  pointer-events: none;
  width: 100%;
  height: 100%;
  opacity: 0.5;
  /* background: #0E182F; */

  background: linear-gradient(to bottom,

      #0E182F, transparent);
}

.background-gradient-layer-temp {
  position: absolute;
  inset: 0;
  overflow: hidden;
  pointer-events: none;
  width: 100%;
  height: 100%;
  opacity: 1;
  background: linear-gradient(to bottom,

      #0E182F, transparent);
}

.light-ray-temp {
  position: absolute;
  inset: 0;
  overflow: hidden;
  pointer-events: none;
  filter: brightness(2) contrast(1.2);
}


.light-ray-temp svg {
  filter: brightness(2.5);
}

.background-top-light-temp {
  position: absolute;
  inset: 0;
  overflow: hidden;
  pointer-events: none;
  opacity: 1;
}

.background-topright-light-temp {
  /* display: none; */
  position: absolute;
  inset: 0;
  left: unset;
  right: 0;
  opacity: 1;
  overflow: hidden;
  pointer-events: none;
}

.background-bottom-dark-temp {
  position: absolute;
  inset: 0;
  top: unset;
  bottom: 0;
  width: 100%;
  height: 50%;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  z-index: 1;
  background: linear-gradient(to top, #0e182fba 0%, #0e182f00 100%);
}


/* 
@keyframes rayBreath {
  0% {
    transform: scale(1);
    filter: blur(80px);
    opacity: 0.4;
  }

  50% {
    transform: scale(1.08);
    filter: blur(100px);
    opacity: 0.8;
  }

  100% {
    transform: scale(1);
    filter: blur(80px);
    opacity: 0.4;
  }
} */


.light-rays-animation-wrapper {
  position: absolute;
  width: 100%;
  z-index: 20;
  height: 100%;
}

.light-rays-container {
  width: 100%;
  height: 100%;
  position: relative;
  pointer-events: none;
  z-index: 30;
  overflow: hidden;
}




.background-noise {

  position: absolute;
  inset: 0;
  background: url("/assets/loader/noise-bg.png") repeat;
  z-index: -2;

}

.font-heading {
  font-family: var(--font-heading);
}

.font-body {
  font-family: var(--font-body);
}







/* loader screen */


.loader-wrapper {
  background: #0E182F;
  position: relative;

}

.loader {
  position: relative;
  inset: 0;
  z-index: var(--z-loader);
  background: transparent;
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  background: url("/assets/loader/noise-bg.png") repeat;
}


.loader-center {

  position: relative;
  display: flex;
  align-items: center;
}

.loader-wheel {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  height: 80vh;
  aspect-ratio: 1;
}


.loader-percent {
  z-index: 1;

  font-family: var(--font-heading);
  font-size: clamp(32px, 3.33vw, 64px);
  line-height: 1;
  letter-spacing: -1.5px;
  text-align: center;
  text-transform: capitalize;
}

.loader-span-percent {
  z-index: 1;

  font-family: NewYork;
  font-weight: 400;
  font-size: clamp(16px, 1.67vw, 32px);
  line-height: 1;
  letter-spacing: -1.5px;
  text-align: center;
  text-transform: capitalize;
}

.loader-bottom {
  position: absolute;
  display: flex;
  flex-direction: column;
  left: 0px;
  bottom: 0px;
  width: 100%;
}
/* ... */

